deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoutbox
  # namespace: maquette
spec:
  selector:
    matchLabels:
      app: shoutbox
  replicas: 2
  template:
    metadata:
      labels:
        app: shoutbox
    spec:
      containers:
      - name: shoutbox
        image: shoutbox:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: shoutbox
  # namespace: maquette
spec:
  selector:
    app: shoutbox
  ports:
    - port: 4000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  # namespace: maquette
spec:
  defaultBackend:
    service:
      name: shoutbox
      port:
        number: 4000
